Atualizações de skiplist

--- a/trunk/latex/ack-ptbr.tex
+++ b/trunk/latex/ack-ptbr.tex
@@ -11,6 +11,8 @@ pacientemente editado vários rascunhos quase finais.
 
 Gostaria de agradecer aos meus alunos do curso de Estruturas de Informação, da 
 Universidade do Estado do Rio de Janeiro que gentilmente me auxiliaram na tradução
-deste livro. Foram eles: Diana Almeida Barros, Eduardo Lobão, Ester Gomes Pais, Fábio Cavallari, Lucas Ferreira Stefe, Matheus Caldeira Matias e Pedro Yuri dos Reis de Moraes Lopes. 
+deste livro. Foram eles: Diana Almeida Barros, Leonardo Lobão, Ester Gomes Pais, 
+Fábio Cavallari, Lucas Ferreira Stefe, Matheus Caldeira Matias e Pedro Yuri 
+dos Reis de Moraes Lopes. 
 
 Ass. João Araujo Ribeiro
