Corrige binarytrees-ptbr

--- a/trunk/latex/binarytrees-ptbr.tex
+++ b/trunk/latex/binarytrees-ptbr.tex
@@ -12,7 +12,7 @@ Para muitas aplicações na ciência da computação, árvores binárias possuem
 \index{árvore com raiz}%
 um nó especial, #r#, com grau de no máximo dois é chamado de \emph{raiz} da árvore. Para cada nó $#u#\neq #r#$, o segundo nó no caminho de #u# para #r# é chamado de \emph{pai} de #u#.
 \index{pai}%
-cada um dos outros nós adjacentes a #u# é chamado de \emph{filho}
+Cada um dos outros nós adjacentes a #u# é chamado de \emph{filho}
 \index{filho} de #u#. Muitas da árvores binárias em que estamos interessados são \emph{ordenadas},
 \index{árvore ordenada}%
 \index{árvore!ordenada}%
@@ -243,7 +243,7 @@ No pior caso, isto é igual à altura da #BinarySearchTree#.
     \includegraphics[width=\HalfScaleIfNeeded]{figs/bst-example-5} 
     \end{tabular}
   \end{center}
-  \caption{Inderindo o valor $8.5$ na árvore binária de busca.}
+  \caption{Inserindo o valor $8.5$ na árvore binária de busca.}
   \figlabel{bst-insert}
 \end{figure}
 
