--- a/trunk/latex/hashing-ptbr.tex
+++ b/trunk/latex/hashing-ptbr.tex
@@ -75,7 +75,7 @@ linguagens de programação, incluindo C, C\#, C++ e Java. Exceções
 notáveis são Python e Ruby, no qual o resultado de uma operação de
 números inteiros de comprimento #w#-bit fixo, é atualizado para uma representação de comprimento variável.}  (Ver
 \figref{multihashing}.) Além disso, a divisão inteira por $2^{#w#-#d#}$
-é equivalente a preservar os $#w#-#d#$ bits mais à direita em uma representação binária (que é implementado deslocando os bits da direita por
+é equivalente a descartar os $#w#-#d#$ bits mais à direita em uma representação binária (que é implementado deslocando os bits da direita por
 $#w#-#d#$ usando o operador \javaonly{#>>>#}\cpponly{#>>#}\pcodeonly{#>>#}).  \notpcode{Desta forma, o código que implementa a fórmula acima é mais simples que a própria fórmula:}
 \codeimport{ods/ChainedHashTable.hash(x)}
 
@@ -178,20 +178,20 @@ Usamos $\star$ para denotar um bit de valor desconhecido.
 A utilidade do \lemref{hashing-mapping} vem da seguinte observação: Se #z# for escolhido uniformemente aleatoriamente de $S$, então #zt# é distribuído uniformemente em $S$. Na seguinte prova, ajuda a pensar na representação binária de #z#, que consiste em $#w#-1$ bits aleatórios seguido por um 1.
 
 \begin{proof}[Prova do \lemref{universal-hashing}]
-  Primeiro, observamos que a condição $#hash(x)#=#hash(y)#$ é equivalente à declaração ``a ordem mais alta #d# bits de $#z# #x# \bmod2 ^{#w#}$ e os #d# bits de ordem superior $#z# #y#\bmod 2^{#w#}$ são os mesmos.'' Uma condição necessária dessa afirmação é que os bits #d# de ordem superior na representação binária de $#z#(#x#-#y#) \ bmod 2 ^ {# w #} $ são todos os 0 ou todos os 1. Isso é,
+  Primeiro, observamos que a condição $#hash(x)#=#hash(y)#$ é equivalente à declaração ``a ordem mais alta #d# bits de $#z# #x# \bmod2 ^{#w#}$ e os #d# bits de ordem superior $#z# #y#\bmod 2^{#w#}$ são os mesmos.'' Uma condição necessária dessa afirmação é que os bits #d# de ordem superior na representação binária de $#z#(#x#-#y#) \ bmod 2 ^ {# w #} $ são todos 0 ou todos 1. Isso é,
   \begin{equation}
-      #z#(#x#-#y#)\bmod 2^{#w#} = 
-      (\underbrace{0,\ldots,0}_{#d#},\underbrace{\star,\ldots,\star}_{#w#-#d#})_2 
-      \eqlabel{all-zeros}
+  #z#(#x#-#y#)\bmod 2^{#w#} = 
+  (\underbrace{0,\ldots,0}_{#d#},\underbrace{\star,\ldots,\star}_{#w#-#d#})_2 
+  \eqlabel{all-zeros}
   \end{equation}
-  when $#zx#\bmod 2^{#w#} > #zy#\bmod 2^{#w#}$ or
+  quando $#zx#\bmod 2^{#w#} > #zy#\bmod 2^{#w#}$ ou
   \begin{equation}
-      #z#(#x#-#y#)\bmod 2^{#w#} = 
-      (\underbrace{1,\ldots,1}_{#d#},\underbrace{\star,\ldots,\star}_{#w#-#d#})_2 
-       \enspace .
-      \eqlabel{all-ones}
+  #z#(#x#-#y#)\bmod 2^{#w#} = 
+  (\underbrace{1,\ldots,1}_{#d#},\underbrace{\star,\ldots,\star}_{#w#-#d#})_2 
+  \enspace .
+  \eqlabel{all-ones}
   \end{equation}
-  quando $#zx#\bmod 2^{#w#} <#zy#\bmod 2^{#w#}$. Portanto, apenas temos que limitar a probabilidade de que $#z#(#x#-#y#) \bmod 2^{#w#}$ pareça \myeqref{all-zeros} ou \myeqref{all-ones}.
+  quando $#zx#\bmod 2^{#w#} < #zy#\bmod 2^{#w#}$. Portanto, apenas temos que limitar a probabilidade de que $#z#(#x#-#y#) \bmod 2^{#w#}$ pareça \myeqref{all-zeros} ou \myeqref{all-ones}.
   
   Seja $ q $ um inteiro ímpar exclusivo tal que $(#x#-#y#)\bmod 2^{#w#}=q2^r$ para algum inteiro $r\ge 0$. Pela \lemref{hashing-mapping}, a representação binária de $#z#q\bmod 2^{#w#}$ tem $#w#-1$ bits aleatórios, seguido por um 1:
   \[
@@ -253,7 +253,7 @@ A correção dos métodos #find(x)#, #add(x)# e #remove(x)# é fácil de verific
 Portanto, quando alcançamos um índice #i'# tal que #t[i']=null#, esta é uma prova de que o elemento #x#, que estamos procurando, não está armazenado na tabela; #t[i']# sempre foi #null#, então não há nenhuma razão para que uma operação anterior #add(x)# tenha prosseguido além do índice #i'#.
 
 O método #resize()# é chamado por #add(x)# quando o número de entradas não-#null# excede $#t.length#/2$ ou #remove(x)# quando o número de entradas de dados é inferior a #t.length/8#. O método #resize()# funciona como os métodos #resize()# de outras estruturas de dados baseadas em array.
-Encontramos o menor inteiro não negativo #d# tal que $2^{#d#}\ge 3#n#$. Reorganizamos o array #t# para que ela tenha tamanho $2^{#d#}$ e, em seguida, inserimos todos os elementos da versão anterior de #t# na nova cópia redimensionada de #t#. Ao fazer isso, restabelecemos #q# igual a #n#, pois o recém-alocado #t# não contém valores #del#.
+Encontramos o menor inteiro não negativo #d# tal que $2^{#d#}\ge 3#n#$. Realocamos o array #t# para que ela tenha tamanho $2^{#d#}$ e, em seguida, inserimos todos os elementos da versão anterior de #t# na nova cópia redimensionada de #t#. Ao fazer isso, restabelecemos #q# igual a #n#, pois o recém-alocado #t# não contém valores #del#.
 \codeimport{ods/LinearHashTable.resize()}
 
 \subsection{Análise da Sondagem Linear}
@@ -265,7 +265,7 @@ Para o restante desta seção, assumiremos que todos os valores de hash são dis
 Esta não é uma suposição realista, mas permitirá que analisemos a sondagem linear. Mais tarde, nesta seção, descreveremos um método, chamado de hash de tabulação, que produz uma função de hash que é "suficientemente boa" para sondagem linear. Também assumiremos que todos os índices nas posições de #t# são tomados no módulo #t.length#, de modo que #t[i]# é realmente uma abreviatura para $#t#[#i#\bmod#t.length#]$.
 
 \index{run}%
-Dizemos que um \emph {percurso $ k $ que começa em # i #} ocorre quando todas as entradas da tabela $#t[i]#, #t[i+1]#,\ldots,#t#[#i#+k-1]$ não são #null# e $#t#[#i#-1]=#t#[#i#+k]=#null#$. O número de elementos não-#null# de #t# é exatamente #q# e o método #add (x) # garante que, em todos os momentos, $#q#\le#t.length#/2$. Existem #q# elementos $#x#_1,\ldots,#x#_{#q#}$ que foram inseridos em #t# desde a última operação #rebuild()#.
+Dizemos que um \emph {percurso $ k $ que começa em # i #} ocorre quando todas as entradas da tabela $#t[i]#, #t[i+1]#,\ldots,#t#[#i#+k-1]$ não são #null# e $#t#[#i#-1]=#t#[#i#+k]=#null#$. O número de elementos não-#null# de #t# é exatamente #q# e o método #add (x) # garante que, em todos os momentos, $#q#\le#t.length#/2$. Existem #q# elementos $#x#_1,\ldots,#x#_{#q#}$ que foram inseridos em #t# desde a última operação #resize()#.
 Por nossa suposição, cada um deles tem um valor de hash, $#hash#(#x#_j)$,
 Isso é uniforme e independente do resto. Com esta configuração, podemos provar o lema principal necessário para analisar a sondagem linear.
 
@@ -337,7 +337,11 @@ O seguinte teorema resume o desempenho da estrutura de dados #LinearHashTable#:
 \index{tabulation hashing}%
 Ao analisar a estrutura # LinearHashTable #, fizemos uma suposição muito forte: que para qualquer conjunto de elementos, $\{#x#_1,\ldots,#x#_#n#\}$, os valores de hash $#hash#($x$_1),\ldots,#hash#(#x#_#n#)$ são distribuídos de forma independente e uniforme sobre o conjunto $\{0,\ldots,#t.length#-1\}$. Uma maneira de conseguir isso é armazenar em um array gigante, #tab#, de comprimento $2^{#w#}$, onde cada entrada é um inteiro de #w#-bit aleatório, independente de todas as outras entradas. Desta forma, podemos implementar #hash(x)# extraindo um inteiro de #d#-bit de #tab[x.hashCode()]#:
 \codeimport{ods/LinearHashTable.idealHash(x)}
-\pcodeonly{Aqui, #>>#, é o operador \emph{deslocamento de bits para a direita}, então #x.hashCode() >> w-d# extrai os #d# bits mais significativos de #x#'s de #w#-bit códigos hash.}
+\pcodeonly{Aqui, #>>#, é o operador \emph{deslocamento de bits para a direita}, então
+	 \begin{center}
+	 	#x.hashCode() >> w-d# 
+	 \end{center}
+extrai os #d# bits mais significativos de #x#'s de #w#-bit códigos hash.}
 
 Infelizmente, armazenar uma matriz de tamanho $2^{#w#}$ é proibitivo em termos de uso de memória. A abordagem usada por \emph {tabulação hashing} é, em vez disso, tratar números # w #-bit como sendo compostos de $#w#/#r#$ inteiros, cada um com apenas $#r#$ bits. Desta forma, o hashing de tabulação só precisa de $#w#/#r#$ arrays cada um do comprimento $2^{#r#}$. Todas as entradas nesses arrays são #w#-bit inteiros aleatoriamente independentes. Para obter o valor de #hash(x)#, divide-se os números inteiros #x.hashCode()# em $#w#/#r#$ #r#-bit e usamos estes como índices nesses arrays. Em seguida, combinamos todos esses valores com o operador exclusivo de bit a bit para obter #hash(x)#.
 O código a seguir mostra como isso funciona quando $#w#=32$ e $#r#=4$:
@@ -473,7 +477,7 @@ O seguinte teorema, que considera o caso de duas sequências do mesmo compriment
   $\{0,\ldots,2^{#w#}-1\}$, e assumindo-se $#x#_i \neq #y#_i$ para pelo menos um índice $i\in\{0,\ldots,r-1\}$. Então
   \[
      \Pr\{ h(#x#_0,\ldots,#x#_{r-1}) =  h(#y#_0,\ldots,#y#_{r-1}) \} 
-          \le (r-1)/#p# \} \enspace .  
+          \le (r-1)/#p# \enspace .  
   \] 
 \end{thm}
 
@@ -590,8 +594,8 @@ Outra opção é aplicar um dos métodos rápidos para sequências de caracteres
 \end{exc}
 
 \begin{exc}
-	Consider the hashing scheme in \secref{multihash}, and suppose
-	$#n#=2^{#d#}$ and $#d#\le #w#/2$.
+	Considere o esquema de hashing na \secref{multihash}, e suponha
+	$#n#=2^{#d#}$ e $#d#\le #w#/2$.
   \begin{enumerate}
   	\item Mostre que, para qualquer escolha do multiplicador, #z#, existe #n# valores que possuem o mesmo código de hash. (Sugestão: isso é fácil e não exige nenhuma teoria de números).
      \item Dado o multiplicador, #z#, descreva #n# valores de modo que todos tenham o mesmo código de hash. (Sugestão: isto é mais difícil e requer uma teoria básica de números).
@@ -644,7 +648,7 @@ Outra opção é aplicar um dos métodos rápidos para sequências de caracteres
 \end{exc}
 
 \begin{exc}
-  Encontre algumas implementações de tabelas hash comumente usadas, tais como as implementações (\\javaonly{Java
+  Encontre algumas implementações de tabelas hash comumente usadas, tais como as implementações \javaonly{Java
   Collection Framework #HashMap#}\cpponly{The C++ STL #unordered\_map#} ou #HashTable# ou #LinearHashTable# neste livro e crie uma programa que armazena inteiros nesta estrutura de dados de modo que haja números inteiros, #x#, de modo que #find(x)# demore tempo linear. Ou seja, encontre um conjunto de #n# inteiros para os quais existem $c#n#$ elementos que dispersem para o mesmo local da tabela.
 
   Dependendo de quão boa seja a implementação, você poderá fazer isso apenas inspecionando o código para a implementação, ou talvez seja necessário que escreva algum código que faça inserções e pesquisas de teste, medindo quanto tempo demora para adicionar e encontrar valores específicos . (Isso pode ser, e tem sido usado, para lançar ataques de negação de serviço em servidores web \cite{cw03}.)
