--- a/trunk/latex/ods-ptbr.tex
+++ b/trunk/latex/ods-ptbr.tex
@@ -144,9 +144,9 @@
 \newcommand{\lemlabel}[1]{\label{lem:#1}}
 \newcommand{\lemref}[1]{Lema~\ref{lem:#1}}
 
-\newtheorem{cor}{Corollary}[chapter]
+\newtheorem{cor}{Corolário}[chapter]
 \newcommand{\corlabel}[1]{\label{cor:#1}}
-\newcommand{\corref}[1]{Corollary~\ref{cor:#1}}
+\newcommand{\corref}[1]{Corolário~\ref{cor:#1}}
 
 \theoremstyle{definition}
 
@@ -155,7 +155,7 @@
 \newcommand{\excref}[1]{Exercício~\ref{exc:#1}}
 
 
-\newtheorem{prp}{Property}[chapter]
+\newtheorem{prp}{Propriedade}[chapter]
 \newcommand{\prplabel}[1]{\label{prp:#1}}
 \newcommand{\prpref}[1]{Propriedade~\ref{prp:#1}}
 
@@ -176,7 +176,11 @@
 \usepackage{ods-colors}
 
 \usepackage{tikz,gnuplot-lua-tikz}
-\newcommand{\thedate}{\today}
+% The following is a work-around for bad distribution of gnuplot-tex
+% https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=835028
+\def\gpsetdashtype#1{} 
+
+\newcommand{\thedate}{\today} %Joao Araujo
 
 \usepackage[bookmarks]{hyperref}
 \hypersetup{colorlinks=true, linkcolor=linkblue,  anchorcolor=linkblue,%
@@ -275,7 +279,7 @@ Edição 0.1G \cpponly{$\beta$}\pcodeonly{$\beta$}
 \include{hashing-ptbr-lang}
 \include{binarytrees-ptbr-lang}
 \include{rbs-ptbr-lang}
-\include{scapegoat-lang}
+\include{scapegoat-ptbr-lang}
 \include{redblack-ptbr-lang}
 \include{heaps-lang}
 \include{sorting-lang}
