--- a/trunk/latex/ods.tex
+++ b/trunk/latex/ods.tex
@@ -143,9 +143,9 @@
 \newcommand{\lemlabel}[1]{\label{lem:#1}}
 \newcommand{\lemref}[1]{Lema~\ref{lem:#1}}
 
-\newtheorem{cor}{Corollary}[chapter]
+\newtheorem{cor}{Corolário}[chapter]
 \newcommand{\corlabel}[1]{\label{cor:#1}}
-\newcommand{\corref}[1]{Corollary~\ref{cor:#1}}
+\newcommand{\corref}[1]{Corolário~\ref{cor:#1}}
 
 \theoremstyle{definition}
 
@@ -175,6 +175,10 @@
 \usepackage{ods-colors}
 
 \usepackage{tikz,gnuplot-lua-tikz}
+
+% The following is a work-around for bad distribution of gnuplot-tex
+% https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=835028
+\def\gpsetdashtype#1{}  
 
 \usepackage[bookmarks]{hyperref}
 \hypersetup{colorlinks=true, linkcolor=linkblue,  anchorcolor=linkblue,%
